# ChangeLog for sci-mathematics/sage
# Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  31 Jul 2015; François Bissey <francois.bissey@canterbury.ac.nz>
  +files/cython-0.23.patch, sage-9999.ebuild:
  Testing migration to cython 0.23.beta in the live ebuild for issue #365. If
  successful, it will be extended to sage 6.8.

  29 Jul 2015; François Bissey <francois.bissey@canterbury.ac.nz>
  +files/sage-6.9-exec.patch, sage-9999.ebuild:
  bump patch for new sage 6.9.beta0

  28 Jul 2015; François Bissey <francois.bissey@canterbury.ac.nz>
  +files/sage-6.8-lazy_import_cache.patch, sage-6.8.ebuild, sage-9999.ebuild:
  Fix for issue #362, use sage's version number for lazy_import_cache pickle
  file rather than path to the source.

  28 Jul 2015; François Bissey <francois.bissey@canterbury.ac.nz>
  sage-6.8.ebuild, sage-9999.ebuild:
  dependency tweak in sage 6.8+

*sage-6.8 (27 Jul 2015)

  27 Jul 2015; François Bissey <francois.bissey@canterbury.ac.nz>
  +sage-6.8.ebuild, metadata.xml:
  Bump to sage 6.8 - add to drop ~x86 because sci-mathematics/rw is not
  keyworded (~)x86 and it makes repoman complains.

  24 Jul 2015; François Bissey <francois.bissey@canterbury.ac.nz>
  sage-9999.ebuild:
  using glpk build without gmp will lead to (minor) doctest failures

  22 Jul 2015; François Bissey <francois.bissey@canterbury.ac.nz>
  sage-9999.ebuild:
  Bump dependency on elliptic curves ebuild

  20 Jul 2015; François Bissey <francois.bissey@canterbury.ac.nz>
  sage-6.6.ebuild, sage-6.7-r1.ebuild, sage-9999.ebuild:
  Move to newer pexpect. Pin notebook version depending on pexpect used.

  16 Jul 2015; François Bissey <francois.bissey@canterbury.ac.nz>
  sage-9999.ebuild:
  Another try at fixing what is now issue #361

  16 Jul 2015; François Bissey <francois.bissey@canterbury.ac.nz>
  -files/ntl-9.3.0.patch, files/sage-6.8-exec.patch, sage-9999.ebuild:
  patch rebasing, bumping and expanding for 6.8.rc0 - also remove ntl-9.3.0