@@ -9,6 +9,7 @@ dev-libs/c-blosc
 dev-python/characteristic
 ~dev-python/cvxopt-1.1.7
 ~dev-python/cython-0.22
+=dev-python/cython-0.23_beta*
 ~dev-python/bottleneck-0.8.0
 ~dev-python/pyopenssl-0.14
 ~dev-python/cryptography-0.6.1
