@@ -2,6 +2,12 @@
 # Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+*sage-6.8-r1 (31 Jul 2015)
+
+  31 Jul 2015; François Bissey <francois.bissey@canterbury.ac.nz>
+  +sage-6.8-r1.ebuild:
+  sage 6.8-r1 uses cython 0.23_beta for issue #365
+
   31 Jul 2015; François Bissey <francois.bissey@canterbury.ac.nz>
   +files/cython-0.23.patch, sage-9999.ebuild:
   Testing migration to cython 0.23.beta in the live ebuild for issue #365. If
